fix: breakpoint хэдера и overflow табов в форме

--- a/src/scss/layout/_offer.scss
+++ b/src/scss/layout/_offer.scss
@@ -142,6 +142,7 @@
 
       &.sapMITBItem {
         width: 33.2%;
+        overflow: hidden;
       }
 
       &.sapMITBSelected {
